updated scrollbar design

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,3 +4,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+  transition-duration: 200ms;
+  width: 8px; /* width of the entire scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.05); /* color of the tracking area */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(115, 115, 115, 0.25); /* color of the scroll thumb */
+  border-radius: 30px; /* roundness of the scroll thumb */
+}
+
+::-webkit-scrollbar-thumb:active {
+  background-color: rgba(115, 115, 115, 0.5);
+}
